@@ -608,6 +608,11 @@ namespace SlimDX
 			Sampler = D3D10_SIT_SAMPLER,
 
 			/// <summary>
+			/// The shader resource is a typed read and write buffer..
+			/// </summary>
+			RWTyped = D3D_SIT_UAV_RWTPYED,
+
+			/// <summary>
 			/// The shader resource is a structure buffer.
 			/// </summary>
 			Structured = D3D11_SIT_STRUCTURED,
