@@ -4,6 +4,9 @@ General
 Math
 	* Added float conversion operator to Rational.
 
+D3DCompiler
+	* Added missing ShaderInputType enum.
+
 DXGI
 	* Added lazy enumeration of adapters to Factory and Factory1.
 	* Added lazy enumeration of outputs to Adapter.
